test/fail/varargs-pattern.grace
method name(*params : type { no }) {}

name(object {})
